--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,3 +1,7 @@
+/* globals.css or styles.css */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,4 +9,9 @@
 /* styles/globals.css */
 body {
   @apply bg-plants bg-cover;
+}
+
+.Toastify__toast--error {
+  background-color: #dc3545;
+  color: white;
 }
